--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   background-color: #131320">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="description"
           content="A collection of 750 NFT accesses that give you the ability to lend NFTs and earn.">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
