--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   background-color: #131320">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="description"
           content="A collection of 750 NFT accesses that give you the ability to lend NFTs and earn.">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -31,13 +30,11 @@
     </style>
 </head>
 <body class="body body-bg--image">
-<div class="bg-picture bg-picture"></div>
-<div class="bg-shadow"></div>
 <header class="header header--timer">
     <div class="header__container">
-        <div class="header__logo">
+        <div class="header__logo" >
             <img src="images/logo.png" alt="Product logo" class="header__logo-image">
-            <div class="header__logo-text" style="margin-left: 10px">
+            <div class="header__logo-text">
                 TON LOMBARD
             </div>
         </div>
