--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body class="body body-bg--image">
-<header class="header header--timer">
+<header class="header header--timer" style="margin-top: 20px; margin-bottom: 0px">
     <div class="header__container">
         <div class="header__logo" >
             <img src="images/logo.png" alt="Product logo" class="header__logo-image">
@@ -101,7 +101,7 @@
     </div>
 </main>
 <footer class="footer footer--timer">
-    <div class="footer__container">
+    <div class="footer__container" style="margin-top: 0px; margin-bottom: 20px">
         <div class="social__container-wrapper">
             <div class="social__container">
                 <div class="social__button-wrapper">
