--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="TON LOMBARD">
-    <meta property="og:image" content="images/logo.png">
+    <meta property="og:image" content="images/cover.jpg">
     <meta name="theme-color" content="#303030">
     <title>
         TON Lombard
