--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="main__buttons">
                 <noindex>
                     <a class="button button--secondary" target="_blank" rel="nofollow"
-                       href="https://wiki.tonlombard.com/">
+                       href="https://ton-lombard.gitbook.io/ton-lombard-wiki-ru/">
                         <div class="button__content">
                             <div class="button__text">
                                 WIKI
